tests/__snapshots__/validation-type-errors-describe-level-errors-stderr.snap.txt
Error: Type 'boolean' is not assignable to type 'string'. ts(2322)

  16 | 
  17 | describe("reported type error?", () => {
  18 |   a = false;
     |   ~
  19 | 
  20 |   test("looks at this test?", () => {
  21 |     expect<number>().type.toBe<number>();

       at ./__typetests__/describe-level.tst.ts:18:3

